removed some unnecessary added modules from the jvm